--- a/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
+++ b/src/TimeyWimey/TimeRegistration/TimeEntryMenu.razor
@@ -25,7 +25,7 @@
                                   AutoFocus="true"
                                   Style="padding-left: 6px flex:0 1 auto"
                                   AdornmentIcon="@Icons.Filled.Search" DebounceInterval="500"
-                                  ValueChanged="(string term) => Search(term)"/>
+                                  ValueChanged="Search"/>
                     </div>
 
                     <MudMenuItem Class="ma-0 pa-0 ml-1 pl-1" OnClick="New">
